@@ -1,3 +1,8 @@
+2008-11-22  Paolo Borelli  <pborelli@katamail.com>
+
+	* src/baobab.c: (baobab_is_excluded_location):
+	Fix logic bug that made it return always FALSE.
+
 2008-10-26  Cosimo Cecchi  <cosimoc@gnome.org>
 
         * src/baobab-utils.c:
